# pmr_elirobots_ws

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  action_test.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/Linux/: devcontainer.json
.devcontainer/WSL/: devcontainer.json
include/eliterobots/: robot.hpp
rsc/: spec.json  stubclient.h
src/: .clang-format  main.cpp  robot.cpp
src/pmr_elirobots_agent/: package.xml  setup.cfg  setup.py
src/pmr_elirobots_agent/pmr_elirobots_agent/: agent.py  node.py  simple_node.py
src/pmr_elirobots_agent/test/: test_agent.py  test_flake8.py  test_mypy.py  test_pep257.py
src/pmr_elirobots_driver/: .clangd  CMakeLists.txt  package.xml
src/pmr_elirobots_driver/include/: boost_aio_socket_connector.hpp  cpphttplibconnector.hpp
src/pmr_elirobots_driver/include/eliterobots/: robot.hpp
src/pmr_elirobots_driver/rsc/: spec.json
src/pmr_elirobots_driver/src/: driver.cpp  main.cpp  robot.cpp
src/src/: main.cpp
src/test/: server.py
